# myshell

./: CMakeLists.txt  README.md  apt_packages.txt  errors.txt  test_file.msh
client/: CMakeLists.txt  main.cpp
inc/IO/: IO.h
inc/internal/: internal.hpp
inc/parse/: parse.hpp
inc/util/: errors.h  util.h  util.hpp
scripts/: build.sh  install.sh  run_tests.msh  tests.sh
scripts/help/: cat.msh  pwd.msh  tests.msh  tests.sh
scripts/help/sum/: main.cpp  sum
src/: main.cpp
src/internal/: add_local_var.cpp  main.cpp
src/internal/cd/: mcd.cpp
src/internal/dot/: mdot.cpp
src/internal/echo/: mecho.cpp
src/internal/errno/: merrno.cpp
src/internal/exit/: mexit.cpp
src/internal/export/: mexport.cpp
src/internal/pwd/: mpwd.cpp
src/parse/: parse.cpp
src/server/: main.cpp
src/util/: IO.cpp  dir.cpp  env.cpp  infinity_loop.cpp  run_program.cpp  util.cpp
src/util/errors/: errors.cpp
